--- a/src/main/webapp/WEB-INF/vm/oa/index.vm
+++ b/src/main/webapp/WEB-INF/vm/oa/index.vm
@@ -25,7 +25,7 @@
 			<td><br/></td>
 		</tr>
 		<tr>
-			<td height="30px" style="color:red; font-size: 20px; text-align: center; font-weight: bolder; letter-spacing: 2px;" >[目前只支持技术、度假、门票、机票、无线，还请其他部门报销的小伙伴们移步到<a href='http://oa.corp.qunar.com'>OA</a>]</td>
+			<td height="30px" style="color:red; font-size: 20px; text-align: center; font-weight: bolder; letter-spacing: 2px;" >[目前只支持技术、度假、门票、机票、无线、目的地、项目管理组还请其他部门报销的小伙伴们移步到<a href='http://oa.corp.qunar.com'>OA</a>]</td>
 		</tr>
 #if("$!{message}"!="")
 		<tr>
