--- a/src/main/webapp/WEB-INF/vm/layout/recruit_layout.vm
+++ b/src/main/webapp/WEB-INF/vm/layout/recruit_layout.vm
@@ -104,7 +104,7 @@
                 </a>
             </li>
             <li>
-                <a href="oa/draft.html">
+                <a href="/student/show_list.html">
                     <span class="menu-text"> 候选人管理 </span>
                 </a>
             </li>
