--- a/src/main/webapp/WEB-INF/vm/layout/recruit_layout.vm
+++ b/src/main/webapp/WEB-INF/vm/layout/recruit_layout.vm
@@ -23,6 +23,9 @@
     <link rel="stylesheet" href="/static/ace/css/colorbox.css"/>
     <link rel="stylesheet" href="/static/ace/css/jquery.qtip.min.css"/>
     <link rel="stylesheet" href="/static/css/myplugin1.css"/>
+    <link rel="stylesheet" href="/static/css/bootstrap-responsive.css"/>
+    <link rel="stylesheet" href="/static/css/bootstrap.css"/>
+    <link rel="stylesheet" href="/static/css/css/mycss.css"/>
 
 
     <!--[if lte IE 8]>
