--- a/src/main/webapp/WEB-INF/vm/recruit/show_list.vm
+++ b/src/main/webapp/WEB-INF/vm/recruit/show_list.vm
@@ -14,18 +14,35 @@
 </style>
 
 
-<div class="row" style="height:600px;">
+<div class="row">
     <div class="col-xs-12">
-        <div class="col-xs-7" style="float:right;">
+        <div class="col-xs-7" style="float:right;width:100%;">
             <div class="form-group dash-button-group" style="margin-bottom: 0px; float: right;">
         <span class="input-icon input-icon-right">
+           <select id="city_id">
+                    <option value="">城市...</option>
+                    <option value="北京">北京</option>
+                    <option value="长春">长春</option>
+                    <option value="哈尔滨">哈尔滨</option>
+                    <option value="沈阳">沈阳</option>
+                    <option value="大连">大连</option>
+                    <option value="西安">西安</option>
+                    <option value="武汉">武汉</option>
+                    <option value="成都">成都</option>
+                    <option value="南京">南京</option>
+           </select>
+        </span>
+        <span class="input-icon input-icon-right">
+            <input id="name" name="name" type="text" placeholder="姓名..." style="width: 100px"/>
+        </span>
+        <span class="input-icon input-icon-right">
             <input class="date" id="date-from" type="text" style="width: 186px" onclick="showTime()"
-                   placeholder="申请日期..."/>
+                   placeholder="开始日期..."/>
             <i class="icon-calendar green"></i>
         </span>
         <span class="input-icon input-icon-right">
             <input class="date" id="date-to" type="text" style="width: 186px" onclick="showTime()"
-                   placeholder="申请日期..."/>
+                   placeholder="开始日期..."/>
             <i class="icon-calendar green"></i>
         </span>
                 <button id="search"
@@ -36,29 +53,39 @@
             </div>
         </div>
     </div>
-    <div class="col-xs-12">
+</div>
+<div class="row">
+	<div class="col-xs-12">
         <div class="col-xs-9" style="width:100%;">
             <div class="widget-box">
                 <div class="widget-header header-color-blue" style="">
                     <h5 class="bigger lighter"><i class="icon-time"></i>面试官列表</h5>
                 </div>
                 <div class="widget-body">
-                    <table id="apply_todo"
-                           class="table table-striped table-bordered table-hover"></table>
+                    <table id="apply_todo" class="table table-striped table-bordered table-hover">
+                    
+                    </table>
                 </div>
             </div>
 
         </div>
-    </div>
+	</div>
 </div>
+<div id="pageDiv">
+    <table class='table '>
+        <tr>
+            <td colspan='9'>
+                <span class='pagination'>合计 <span id="countofStaff"></span> 个用户每页显示</span>
+                <select id='numofpage' class='input-small pagination '>
+                    <option value='30'>30个</option>
+                </select>
 
-<div id="dialog-confirm" class="hide">
-    <form class="form-horizontal">
-        <div id="edit-form">
-            <div id="edit_content">
-            </div>
-        </div>
-    </form>
+                <div class='pagination pull-right'>
+                    <ul id='pageButton'></ul>
+                </div>
+            </td>
+        </tr>
+    </table>
 </div>
 
 <div id="common-notice-dialog" class="hide"></div>
@@ -77,15 +104,79 @@
 </script>
 <script src="static/js/apply_common.js">
 </script>
+<script src="static/js/myJs.js">
+</script>
 <script src="static/js/all_common.js">
 </script>
 <script src="/recruit/static/My97DatePicker/WdatePicker.js"></script>
 <script language=JavaScript>
 
+    jQuery(function ($) {
+        show_registered_staff("");
+        $.ajax({
+                    type: "GET",
+                    contentType: 'application/json',
+                    dataType: "json",
+                    url: "/interview/all",
+                    data: {'pageIndex': 1, 'pageSize': 30},
+                    success: function (returnedData) {
+                    	alert(returnedData);
+                        if( !ajaxReturn( returnedData ) ){
+                            return;
+                        }
+                        if (returnedData == null) {
+                            alert("系统中出现了异常，请稍后重试");
+                            show_enrollState_empty_table();
+                        }else {
+                            show_registered_staff(returnedData);
+                            if (returnedData.data != null) {
+                                var count = parseInt(parseInt(returnedData.data.staffCount) / 30);
+                                if (parseInt(parseInt(returnedData.data.staffCount) % 30) != 0) {
+                                    count++;
+                                }
+                                setPage(document.getElementById("pageButton"), count, 1);//主要是添加系统中的分页的功能
+
+                            }
+                        }
+
+                    },
+                    error: function () {
+                        alert("系统发生了错误请稍后重试");
+                    }
+                });
+    });
+    
     function showTime() {
         WdatePicker({dateFmt: 'yyyy-MM-dd'});
     }
 
+    function show_registered_staff(returnedData) {
+    	var table = "<table width='100%' style='table-layout:fixed' class='table table-bordered'><thead class='info'><tr><th style='width:20px;align:center;'><input type='checkbox' id='selectAll'  onclick='selectAllCheckBoxes(this);'></th><th style='width:60px;text-align:center;'>城市</th><th style='width:80px;text-align:center;'>姓名</th><th style='width:100px;text-align:center;'>用户名</th><th style='width:100px;text-align:center;'>密码</th><th style='width:90px;text-align:center;'>开始时间</th><th style='width:80px;text-align:center;'>结束时间</th><th style='width:200px;text-align:center;'>操作</th></tr></thead>";
+		if (returnedData.data != null) {
+            var staffInfos = returnedData.data.list;
+            table = table + "<tbody>";
+            for (var i = 0; i < (staffInfos.length); ++i) {
+                table += "<tr><td><input type='checkbox' name='checked' value=" + (staffInfos[i].staffId) + " ></td>";
+                table = table + "<td style='word-wrap:break-word;'>" + (staffInfos[i].staffId) + "</td>";
+                table = table + "<td style='word-wrap:break-word;' id='name" + (staffInfos[i].staffId) + "'>" + (staffInfos[i].staffName) + "</td>";
+                table = table + "<td style='word-wrap:break-word;'>" + (staffInfos[i].staffDepartment) + "</td>";
+                table = table + "<td style='word-wrap:break-word;'>" + (staffInfos[i].staffEmail) + "</td>";
+                table = table + "<td style='word-wrap:break-word;'>" + (staffInfos[i].staffPhone) + "</td>";
+                table = table + "<td style='word-wrap:break-word;'>" + (staffInfos[i].staffNo) + "</td>";
+                if ((staffInfos[i].remark) == null || (staffInfos[i].remark).length == 0) {
+                    table = table + "<td style='word-wrap:break-all;' id='tdcomment" + (staffInfos[i].staffId) + "'>" + "<a href='#contentEdit' data-toggle='modal' class='btn btn-link' onclick=\"addComment(\' " + (staffInfos[i].staffId) + " \',\' " + (staffInfos[i].staffName) + "\')\">" + ((staffInfos[i].remark)) + "添加备注</a>" + "</td>";
+                }
+                else {
+                    table = table + "<td style='word-wrap:break-all;' id='tdcomment" + (staffInfos[i].staffId) + "'>" +"<input type='hidden' id='remark"+(staffInfos[i].staffId) +"' value='"+(staffInfos[i].remark)+"'/>"+ "<span id=\"comment" + (staffInfos[i].staffId) + "\">" + (staffInfos[i].remark).substr(0,20)+"..." + "</span><a href='#contentEdit' data-toggle='modal' class='btn btn-link' onclick=\"addComment(\'" + (staffInfos[i].staffId) + "\',\'" + (staffInfos[i].staffName) + "\');\">" + "<i class='icon-edit'></i></a>" + "</td>";
+                }
+            }
+
+        }
+    	table += "</table>";
+    	$("#apply_todo").html("");
+    	$("#apply_todo").append(table);
+	}
+	
     //显示表格数据
     function showApplyTodoInfo(url, tableName, rTableId, status) {
         var ex = document.getElementById(tableName);
@@ -99,29 +190,33 @@
                 'type="checkbox" value="ALL" class="ace"><span class="lbl"></span></label>',
                 "bSortable": false, "sWidth": 10, "sClass": "center"
             }, {
-                "sTitle": "ID",
-                "sWidth": 100,
+                "sTitle": "城市",
+                "sWidth": 50,
                 "sClass": "center",
                 "bVisible": true
             }, {
-                "sTitle": "申请日期",
-                "sWidth": 120,
+                "sTitle": "姓名",
+                "sWidth": 80,
                 "sClass": "center"
             }, {
-                "sTitle": "报销金额",
+                "sTitle": "用户名",
+                "sWidth": 80,
+                "sClass": "center"
+            }, {
+                "sTitle": "密码",
+                "sWidth": 80,
+                "sClass": "center"
+            }, {
+                "sTitle": "开始时间",
                 "sWidth": 100,
                 "sClass": "center"
-            }, {
-                "sTitle": "详情",
-                "sWidth": 50,
+            },{
+                "sTitle": "结束时间",
+                "sWidth": 100,
                 "sClass": "center"
             }, {
                 "sTitle": "操作",
-                "sWidth": 100,
-                "sClass": "center"
-            }, {
-                "sTitle": "流程图",
-                "sWidth": 100,
+                "sWidth": 80,
                 "sClass": "center"
             }];
         var wh = $(window).height();
@@ -143,6 +238,8 @@
             "fnServerData": function (sSource, aDataSet, fnCallback) {
                 var startDate = $.trim($('#date-from').val());
                 var endDate = $.trim($('#date-to').val());
+                var cityName = $.trim($('#city_id').val());
+                var name = $.trim($('#name').val());
                 var start = 0;
                 var length = 0;
                 for (var i = 0; i < aDataSet.length; i++) {
@@ -161,6 +258,12 @@
                 }
                 if (endDate != '') {
                     vars["endTime"] = endDate;
+                }
+                if (cityName != '') {
+                    vars["cityName"] = cityName;
+                }
+                if (name != '') {
+                    vars["name"] = name;
                 }
                 var params = {"vars": vars};
                 $.ajax({
@@ -232,144 +335,5 @@
             }
         })
     }
-
-    function constructTodoTableInfo(data) {
-        var aaData = [];
-        var needData = data.tableInfos;
-        var d_len = needData.length;
-        for (var i = 0; i < d_len; i++) {
-            var money = parseFloat(needData[i][2]);
-            money /= 100;
-            var map = $.parseStr("<a href='javascript:void(0);' " +
-            "onclick='showEditDialog(%s);'><i class='icon-link'></i></a>", needData[i][0]);
-            var push = "";
-            var checkbox = '<label><input value="" type="checkbox" class="ace"> <span class="lbl"></span></label>';
-            push = '<a href="javascript:void(0);" role="button" ' +
-            'onclick="sendEmailToCandidate(\'' + needData[i][0] + '\')" class="green"><i class="icon-user">催办</i></a>';
-            var trace = '<a href="javascript:void(0);" role="button" onclick="trace(\'' + needData[i][0] + '\')" class="green">流程图</a>';
-            aaData.push([checkbox, needData[i][0], needData[i][1], money.toFixed(2), map, push, trace]);
-        }
-        return aaData;
-    }
-
-
-    function applyBackorDel(oTable, num) {
-        var operStr = "cancel";
-        var msg = "是否撤销?";
-        var title = "撤销操作";
-        var formIds = "";
-        $("input:checked", oTable.fnGetNodes()).each(function () {
-            var row = $(this).parent().parent().parent();
-            var nTds = $('td', row);
-            var formId = nTds[1].childNodes[0].data;
-            formIds += formId + ",";
-        });
-        if (formIds.length < 1) {
-            showResultDialog("apply-result-dialog", operStr, 'icon-lightbulb',
-                    generateNoticeMsg("请选择要撤销的条目!"), 300);
-            return;
-        }
-        try {
-            $("#back-msg-dialog").empty();
-            $("#back-msg-dialog").append(generateNoticeMsg(msg));
-            var title_html = $.parseStr('<div style="color: DodgerBlue; padding: 4px; height: 28px; font-size: 14px; font-weight: bold">' +
-            '<li class="icon-user"></li> %s</div>', title);
-            var dialog = $("#back-msg-dialog").removeClass('hide').dialog({
-                modal: true,
-                width: 300,
-                title: title_html,
-                title_html: true,
-                closeOnEscape: false,
-                open: function (event, ui) {
-                    $(".ui-dialog-titlebar-close").hide();
-                },
-                buttons: [
-                    {
-                        id: "apply-msg-submit",
-                        text: "提交",
-                        "class": "btn btn-primary btn-xs",
-                        click: function (e) {
-                            applyBackorDeltoDB(formIds, operStr);
-                            $(this).dialog("close");
-                        }
-                    },
-                    {
-                        id: "apply-msg-cancel",
-                        text: "取消",
-                        "class": "btn btn-xs",
-                        click: function () {
-                            $(this).dialog("close");
-                        }
-                    }
-                ]
-            });
-        } catch (e) {
-            showCommonNoticeDialog('网络错误', 'icon-warning-sign',
-                    generateNoticeMsg('网络错误，请刷新后重试!'), 300);
-        }
-
-    }
-
-    function applyBackorDeltoDB(formIds, action) {
-        var id = "apply-result-dialog";
-        var params = {};
-        var vars = {};
-        vars["formIds"] = formIds;
-        vars["backDel"] = action;
-        params["vars"] = vars;
-        $.ajax({
-            contentType: "application/json; charset=utf-8",
-            url: "oa/back_del",
-            type: "post",
-            data: JSON.stringify(params),
-            success: function (resp) {
-                var title_html_str = '';
-                try {
-                    if (resp.errorCode == 0) {
-                        title_html_str = '<div class="dialog_title"><li class="icon-info-sign"></li> 审批撤销</div>';
-                        var succeed_html = '<b><li class="icon-check"></li> 撤销成功</b><br/>';
-                        $("#" + id).append(generateNoticeMsg(succeed_html));
-                    } else {
-                        title_html_str = '<div class="dialog_title"><li class="icon-exclamation-sign"></li>审批撤销</div>';
-                        $("#" + id).append(generateNoticeMsg(resp.errorMessage));
-                    }
-                } catch (e) {
-                }
-                var dialog = $("#" + id).removeClass('hide').dialog({
-                    modal: true,
-                    width: 400,
-                    resizable: true,
-                    title: title_html_str,
-                    title_html: true,
-                    closeOnEscape: false,
-                    buttons: [
-                        {
-                            text: "确定",
-                            "class": "btn btn-primary btn-xs",
-                            click: function () {
-                                $("#" + id).empty();
-                                $("#" + id).dialog('destroy');
-                            }
-                        }
-                    ],
-                    close: function () {
-                        $("#").empty();
-                        $("#" + id).dialog('destroy');
-                    }
-                });
-                showApplyTodoInfo("oa/todo", "apply_todo", "todo-apply-details-list", "审批过程中");
-            },
-            "error": function (jqxhr, textstatus, errorthrown) {
-                enableCurrentApproveToolbarButton(true);
-                showResultDialog('网络错误', 'icon-warning-sign',
-                        generateNoticeMsg('网络错误，请刷新后重试!'), 300);
-            }
-        });
-    }
-    
-    function trace(oid){
-    	window.open('oa/oa_common/'+oid+'/trace_pic.png', 'newwindow',   'height=600,   width=1200, toolbar=no,   menubar=no,   scrollbars=no,   resizable=no,location=n   o,   status=no') ;     
-    }
-
 
 </script>
