--- a/src/main/webapp/WEB-INF/vm/layout/recruit_layout.vm
+++ b/src/main/webapp/WEB-INF/vm/layout/recruit_layout.vm
@@ -25,7 +25,7 @@
     <link rel="stylesheet" href="/static/css/myplugin1.css"/>
     <link rel="stylesheet" href="/static/css/bootstrap-responsive.css"/>
     <link rel="stylesheet" href="/static/css/bootstrap.css"/>
-    <link rel="stylesheet" href="/static/css/css/mycss.css"/>
+    <link rel="stylesheet" href="/static/css/mycss.css"/>
 
 
     <!--[if lte IE 8]>
